Convert AVDAs thread hang detection to be timer based

Previously AVDAManager counted the number of tasks pending on the construction
thread and considered the thread hung when that number exceeded a threshold.
Now we use a MessageLoop::TaskObserver to watch how long tasks take. If a task
takes longer than 800ms it's considered hung. This mechanism should be more
robust because we don't have to worry about counting the tasks correctly.

BUG=638406

Review-Url: https://codereview.chromium.org/2245333004
Cr-Commit-Position: refs/heads/master@{#413527}

Former-commit-id: d8e0dfd15ced352e5a4128553397609fb08f4c00